# smart_induction_heads

./: .gitignore  matplotlibrc  pyproject.toml  readme.md  readme.txt  requirements.txt  run_project.sh
data/: language.json
data/border_classification_results/: Qwen2.5-0.5B_markov2_border_classification.pt  Qwen2.5-0.5B_markov3_border_classification.pt  (+6 more)
plotting/: overview.ipynb  overview.py  overviewv2.py  plot.py  plot_ablation.py  plot_ablation2.py  plot_ablation3.py  plot_ablation4.py  plot_ablation5.py  plot_ablation_all_models.py  plot_ablation_context_match.py  plot_ablation_individual.py  plot_ablations_graded.py  plot_context_decodability.py  plot_context_decodability_individual.py  plot_data_example.py  plot_example_prompt.py  plot_learning.py  plot_learning_alt.py  plot_learning_error.py  plot_learning_heads.py  plot_learning_individual.py  plot_learning_map.py  plot_natural_language.py  plot_natural_language_aggregate.py  plot_one_back.py  plot_repro.py  visualize_induction_scores.py
src/: ablate_heads.py  classify_border_tokens.py  classify_head_activity.py  eval_llm.py  find_learning_heads.py  find_learning_heads_alt.py  find_one_back_heads.py  inspect_ablated_induction.py  inspect_ablated_induction_head.py  inspect_ablated_inductionv2.py  inspect_heads.py  inspect_induction_head.py  inspect_one_back.py  inspect_one_back_free.py  learning_algo.py  low_dim_analysis.py  playground.py  playground.slurm  score_induction.py  score_window.py  swap_heads.py  trace_error.py  trace_nback.py  trace_nback2.py  trace_prediction.py  utils.py
(+4207 files in other folders)
