[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_induction_heads"
version = "0.0.1"
dependencies = [
    "transformers[torch]",
    "seaborn", 
    "fastcore",
    "nnsight", 
    "pandas",
    "ipykernel",
    "natsort",
    "einops",
    "flash-attn ; sys_platform == 'linux'",
    "scikit-learn"
    ]

[tool.uv]
no-build-isolation-package = ["flash-attn"]